# lookback

./: .gitignore  AGENTS.md  Makefile  README.md
.cursor/: settings.json
.github/: dependabot.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260405_0001_init.py  20260408_0001_initial_schema.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  consent.py  insights.py  router.py  routes.py  screenshots.py  search.py  timeline.py  transcriptions.py
backend/app/audio/: stream_manager.py
backend/app/db/: models.py  session.py
backend/app/journal/: repository.py  schemas.py
backend/app/models/: db_models.py  event.py  schemas.py
backend/app/services/: ai_clients.py  insights.py  insights_service.py  screenshot_analysis_service.py  search_service.py  transcription.py  transcription_service.py
backend/app/services/enrichment/: pipeline.py
backend/app/services/ingestion/: pipeline.py
backend/app/services/insights/: pipeline.py
backend/app/services/providers/: __init__.py  config.py  gemini_adapter.py  openai_adapter.py
backend/app/services/review/: pipeline.py
backend/app/transcription/: service.py
backend/tests/: conftest.py  test_agents_spec.py  test_ai_clients.py  test_config.py  test_contracts.py  test_insights.py  test_main.py  test_providers.py  test_runtime_import.py  test_schemas.py  test_services.py
docs/: PLAN.md  architecture.md
frontend/: .env.example  README.md  jest.config.ts  jest.setup.ts  (+4 more)
(+41 files in other folders)
